hydroflow_datalog_core/src/snapshots/hydroflow_datalog_core__tests__minimal_program@surface_graph.snap
---
source: hydroflow_datalog_core/src/lib.rs
assertion_line: 421
expression: graph.surface_syntax_string()
---
1v1 = merge ();
2v1 = tee ();
3v1 = merge ();
4v1 = tee ();
5v1 = source_stream (input);
6v1 = for_each (| v | out . send (v) . unwrap ());
7v1 = map (| row : (_ , _ ,) | (row . 1 , row . 0 ,));

1v1 -> 2v1;
3v1 -> 4v1;
5v1 -> 1v1;
4v1 -> 6v1;
7v1 -> 3v1;
2v1 -> 7v1;

