hydroflow_datalog_core/src/snapshots/hydroflow_datalog_core__tests__multi_detuple@surface_graph.snap
---
source: hydroflow_datalog_core/src/lib.rs
expression: flat_graph_ref.surface_syntax_string()
---
2v1 = unique :: < 'tick > ();
5v1 = unique :: < 'tick > ();
7v1 = source_stream (ints1);
8v1 = for_each (| v | result . send (v) . unwrap ());
9v1 = map (| row_untuple : (_ , _ ,) | (row_untuple . 0 . 0 , row_untuple . 0 . 1 , row_untuple . 1 ,));
10v1 = map (| row_untuple : (_ , _ , _ ,) | (row_untuple . 0 , row_untuple . 1 , row_untuple . 2 . 0 , row_untuple . 2 . 1 ,));
11v1 = map (| row : (_ , _ , _ , _ ,) | ((row . 0 , row . 1 , row . 2 , row . 3 ,) , ()));
12v1 = map (| (g , a) : ((_ , _ , _ , _ ,) , _) | (g . 0 , g . 1 , g . 2 , g . 3 ,));

7v1 -> 2v1;
12v1 -> 5v1;
5v1 -> 8v1;
9v1 -> 10v1;
2v1 -> 9v1;
11v1 -> 12v1;
10v1 -> 11v1;
